# mpich

confdb/: aclocal_romio.m4
src/mpi/romio/: Makefile.am  configure.ac
src/mpi/romio/adio/ad_daos/: ad_daos_common.c
src/mpi/romio/adio/ad_gpfs/: ad_gpfs_hints.c  ad_gpfs_rdcoll.c  ad_gpfs_wrcoll.c
src/mpi/romio/adio/ad_ime/: ad_ime_common.c
src/mpi/romio/adio/ad_lustre/: ad_lustre.h  ad_lustre_aggregate.c  ad_lustre_hints.c  ad_lustre_open.c  ad_lustre_rwcontig.c  ad_lustre_wrcoll.c  ad_lustre_wrstr.c
src/mpi/romio/adio/ad_pvfs2/: ad_pvfs2_common.c  ad_pvfs2_io_dtype.c
src/mpi/romio/adio/common/: ad_aggregate.c  ad_aggregate_new.c  ad_coll_build_req_new.c  ad_coll_exch_new.c  ad_hints.c  ad_iread_coll.c  ad_iwrite_coll.c  ad_open.c  ad_opencoll.c  ad_read_coll.c  ad_set_view.c  ad_write_coll.c  cb_config_list.c  flatten.c  iscontig.c  malloc.c  onesided_aggregation.c  p2p_aggregation.c  utils.c
src/mpi/romio/adio/include/: adio.h  adioi.h
src/mpi/romio/include/: mpio.h.in
src/mpi/romio/mpi-io/: close.c  get_view.c  iread_sh.c  iwrite_sh.c  mpir-mpioinit.c  mpiu_external32.c  open.c  read_ord.c  read_ordb.c  read_sh.c  register_datarep.c  write_ord.c  write_ordb.c  write_sh.c
src/mpi/romio/mpi-io/glue/mpich/: mpio_err.c
src/mpi/romio/test/: Makefile.am  README  aggregation1.c  aggregation2.c  async-multiple.c  async.c  atomicity.c  atomicity_coll.c  big_extents.c  btype_lt_ftype.c  buf_noncontig.c  check_type_contig.c  coll_perf.c  coll_test.c  creat_excl.c  darray_read.c  error.c  excl.c  external32.c  fcoll_test.f.in  file_info.c  fmisc.f.in  fperf.f.in  fstype_prefix.c  ghost_cell.c  hindexed.c  hindexed_fsize.c  i_noncontig.c  indexed_fsize.c  large_array.c  large_dtype.c  large_file.c.in  misc.c.in  noncontig.c  noncontig_coll.c  noncontig_coll2.c  ntimes_buftype.c  ntimes_filetype.c  nvars.c  ordered_fp.c  (+15 more)
